--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
+        viewBinding true
         compose true
     }
     composeOptions {
@@ -57,6 +58,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     // Moshi
     implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
+    // Coil
+    implementation "io.coil-kt:coil:2.2.2"
     //*******************************
 
 
