--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DistributedMobilityGroupProject"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
+        <activity android:name="com.example.distributedmobilitygroupproject.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.DistributedMobilityGroupProject">
